# news-summary

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  voiceover-script-2026-01-28.txt
.github/workflows/: ci.yml
.trae/skills/Reiner-ai-daily/: SKILL.md
.trae/skills/Reiner-ai-daily/voiceover-script/: SKILL.md
.trae/skills/voiceover-script/: SKILL.md  extract_news.py
Report/: Reiner-AI-信息差-2026-01-28.html
src/news_summary/: cli.py  logging_config.py  parser.py
tests/: test_parser.py
