[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-summary"
version = "0.1.0"
description = "AI 新闻摘要与可视化报告生成器（工程化配置）"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
]

[project.urls]
homepage = "https://example.com"

[project.scripts]
news-summary = "news_summary.cli:main"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py38"
lint.select = ["E", "F", "I", "B", "UP", "SIM"]
lint.ignore = ["E501"]
extend-exclude = [".trae/"]

[tool.mypy]
python_version = "3.8"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
strict_optional = true
disallow_any_generics = true
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
